truffle/src/com.oracle.truffle.sl.test/src/tests/error/parser/InvalidAssignmentInWhileCond.sl
function double(x) {
  return 2 * x;
}

function main() {
  while (double(2) = 4) {
    42;
  }
}